--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./backlogo.png">
     <title>Universe of thoughts</title>
 </head>
 <style>
 body{
-    background-image: url(./stars-1837306_960_720.jpg);
-    background-repeat:no-repeat;
-    background-size: 100%;   
+background-color: black;
 }
 
 </style>
 <body>
-    <a href="./folder/">folder</a>
+    <a href="./folder/"><img src="./folder/folderlogo.png">folder</a>
     <a href="./gunaburger/"><img>gunaburger</a>
     <a href="./hoogle/">hoogle</a>
-    <a href="./oneandthree/">oneandthree</a>
+    <a href="./oneandthree/"><img src="./oneandthree/img/oneandthree1text_icon.png"></a>
     <a href="./spongebob/view/index.html">spongebob</a>
 </body>
 </html>
