--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Universe of thoughts</title>
 </head>
 <style>
-
+div .bubbles-container{
+    border: 1px solid red;
+}
 
 </style>
 <body>
@@ -22,7 +24,7 @@
     <a href="./spongebob/view/index.html">spongebob</a> -->
     <div class="center">
         <div class="hero">
-           
+        
             <div class="snow">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1536" preserveAspectRatio="xMidYMax slice">
                     <g fill="#FFF" fill-opacity=".15" transform="translate(55 42)">
