--- a/maincopy.html
+++ b/maincopy.html
@@ -16,11 +16,11 @@
     <div class="top">
 
     </div>
-    <a href="./folder/"><img src="./folder/folderlogo.png">folder</a>
+    <!-- <a href="./folder/"><img src="./folder/folderlogo.png">folder</a>
     <a href="./gunaburger/"><img>gunaburger</a>
     <a href="./hoogle/">hoogle</a>
     <a href="./oneandthree/"><img src="./oneandthree/img/oneandthree1text_icon.png"></a>
-    <a href="./spongebob/view/index.html">spongebob</a>
+    <a href="./spongebob/view/index.html">spongebob</a> -->
     <div class="center">
 
           
