--- a/main.html
+++ b/main.html
@@ -174,7 +174,7 @@
             <div class="bottom_fish_boxnone">
             </div>
             <div class="bottom_fish_box">
-                    <div class="fish">
+                    <div class="bigfish">
                     <div class="antena"></div>
                     <div class="rest">
                     <div class="head">
