--- a/index.html
+++ b/index.html
@@ -8,11 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="loader">
+    <!-- <div class="loader">
         <a href="./webP.html"><h2>WEB PAGE</h2></a>
         <a href="#"><h2>APP PAGE</h2></a>
         <a href="./folder/index.html"><h2>STORAGE</h2></a>
 
+      </div> -->
+    
+
+      <div class="suggest-l"></div>
+      <div class="iphone-l">
+        <div class="screen-ll">
+          <div id="wrapper">
+            <div class="menu-l">
+              <canvas data-colors="#69D2E7:#A7DBD8:#E0E4CC:#F38630:#FA6900:#C02942:#542437:#53777A:#ECD078:#FE4365" data-sectionHeight="200" data-contentId="js-content" id="myCanvas1" class="canvas-e"></canvas>
+              <div id="js-content" class="content-ll">
+                <div class="section-b"></div>
+                <div class="section-b is-watermellon"></div>
+                <div class="section-b is-fish"></div>
+                <div class="section-b is-donut"></div>
+                <div class="section-b is-icecreame"></div>
+                <div class="section-b is-bananas"></div>
+                <div class="section-b is-drink"></div>
+                <div class="section-b is-candies"></div>
+                <div class="section-b is-pizza"></div>
+                <div class="section-b is-china"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+  
 </body>
 </html>
