--- a/ii.html
+++ b/ii.html
@@ -1,214 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-<style>* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+<style>
+  .section {
+  max-height: 250px;
+  padding: 1rem;
+  overflow-y: auto;
+  direction: ltr;
+  scrollbar-color: #d4aa70 #e4e4e4;
+  scrollbar-width: thin;
   }
-  body,
-  html {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: auto;
-    font-family: monospace;
-    background-color: #eeebf0;
-    position: relative;
-  }
-  .suggest-l {
-    width: 300px;
-    height: 300px;
-    background: transparent url("https://s.cdpn.io/6859/suggest.png") no-repeat center center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: 200px;
-    margin-top: -200px;
-  }
-  .iphone-l {
-    width: 600px;
-    height: 1061px;
-    margin: 0 auto;
-    margin-top: 50px;
-    background: transparent url("https://s.cdpn.io/6859/iphone.png") no-repeat center center;
-    position: relative;
-  }
-  .iphone-l > .screen-ll {
-    position: absolute;
-    top: 185px;
-    left: 91px;
-    width: 416px;
-    height: 713px;
-    overflow: hidden;
-  }
-  .touch {
-    overflow: hidden !important;
-    border: 10px solid #f00;
-  }
-  #wrapper {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    overflow-x: hidden;
-  }
-  #wrapper.is-with-scroll {
-    width: 432px;
-  }
-  #wrapper .menu-l {
-    position: relative;
-  }
-  
-  #wrapper .menu-l.is-loaded{
-     background: #69d2e7;
-  /* Old browsers */
-  /* IE9 SVG, needs conditional override of 'filter' to 'none' */
-    background: -moz-linear-gradient(top, #69d2e7 0%, #69d2e7 50%, #fe4365 51%, #fe4365 100%);
-  /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #69d2e7), color-stop(50%, #69d2e7), color-stop(51%, #fe4365), color-stop(100%, #fe4365));
-  /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #69d2e7 0%, #69d2e7 50%, #fe4365 51%, #fe4365 100%);
-  /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #69d2e7 0%, #69d2e7 50%, #fe4365 51%, #fe4365 100%);
-  /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #69d2e7 0%, #69d2e7 50%, #fe4365 51%, #fe4365 100%);
-  /* IE10+ */
-    background: linear-gradient(to bottom, #69d2e7 0%, #69d2e7 50%, #fe4365 51%, #fe4365 100%);
-  /* W3C */
-  }
-  
-  #wrapper .content-ll {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    font-size: 25px;
-    line-height: 30px;
-    -webkit-transform: rotate3d(0, 0, 0);
-    -moz-transform: rotate3d(0, 0, 0);
-    -ms-transform: rotate3d(0, 0, 0);
-    -o-transform: rotate3d(0, 0, 0);
-    transform: rotate3d(0, 0, 0);
-  }
-  .section-b {
-    height: 200px;
-    position: relative;
-    cursor: pointer;
-  }
-  .section-b:active:after {
-    width: 76px;
-    height: 76px;
-    margin-top: -38px;
-    margin-left: -38px;
-    background-size: 100% 100%;
-    -webkit-transition: all 0.15s ease-out;
-    -moz-transition: all 0.15s ease-out;
-    -o-transition: all 0.15s ease-out;
-    transition: all 0.15s ease-out;
-  }
-  .section-b.is-check {
-    z-index: 1;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background-color: #f00;
-  }
-  .section-b:after {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -50px;
-    content: '';
-    width: 100px;
-    height: 100px;
-    background: transparent url("https://s.cdpn.io/6859/icecreame.png") no-repeat center center;
-    background-size: 100% 100%;
-  }
-  .section-b.is-watermellon:after {
-    background: transparent url("https://s.cdpn.io/6859/watermellon.png") no-repeat center center;
-    background-size: 100% 100%;
-  }
-  .section-b.is-fish:after {
-    background: transparent url("https://s.cdpn.io/6859/fish.png") no-repeat center center;
-    background-size: 100% 100%;
-  }
-  .section-b.is-donut:after {
-    background: transparent url("https://s.cdpn.io/6859/donut.png") no-repeat center center;
-    background-size: 100% 100%;
-  }
-  .section-b.is-icecreame:after {
-    background: transparent url("https://s.cdpn.io/6859/icecreame2.png") no-repeat center center;
-    background-size: 100% 100%;
-  }
-  .section-b.is-bananas:after {
-    background: transparent url("https://s.cdpn.io/6859/bananas.png") no-repeat center center;
-    background-size: 100% 100%;
-  }
-  .section-b.is-drink:after {
-    background: transparent url("https://s.cdpn.io/6859/drink.png") no-repeat center center;
-    background-size: 100% 100%;
-  }
-  .section-b.is-candies:after {
-    background: transparent url("https://s.cdpn.io/6859/candies.png") no-repeat center center;
-    background-size: 100% 100%;
-  }
-  .section-b.is-pizza:after {
-    background: transparent url("https://s.cdpn.io/6859/pizza.png") no-repeat center center;
-    background-size: 100% 100%;
-  }
-  .section-b.is-china:after {
-    background: transparent url("https://s.cdpn.io/6859/china.png") no-repeat center center;
-    background-size: 100% 100%;
-  }
-      @media all and (max-width:930px) {
-        .suggest-l {
-          margin-left: -150px;
-          top: 0;
-          margin-top: 0;
-        }
-        .iphone-l {
-          margin: 0 auto;
-          margin-top: 250px;
-        }
-      }
-  </style>
-<body>
-    <div class="suggest-l"></div>
-    <div class="iphone-l">
-      <div class="screen-ll">
-        <div id="wrapper">
-          <div class="menu-l">
-            <canvas data-colors="#69D2E7:#A7DBD8:#E0E4CC:#F38630:#FA6900:#C02942:#542437:#53777A:#ECD078:#FE4365" data-sectionHeight="200" data-contentId="js-content" id="myCanvas1" class="canvas-e"></canvas>
-            <div id="js-content" class="content-ll">
-              <div class="section-b"></div>
-              <div class="section-b is-watermellon"></div>
-              <div class="section-b is-fish"></div>
-              <div class="section-b is-donut"></div>
-              <div class="section-b is-icecreame"></div>
-              <div class="section-b is-bananas"></div>
-              <div class="section-b is-drink"></div>
-              <div class="section-b is-candies"></div>
-              <div class="section-b is-pizza"></div>
-              <div class="section-b is-china"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
+  h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+  }
+
+  p + p {
+    margin-top: 1rem;
+  }
+
+
+.section::-webkit-scrollbar {
+  width: 20px;
+}
+
+.section::-webkit-scrollbar-track {
+  background-color: #f4e0f7;
+  border-radius: 100px;
+}
+
+.section::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  background-image: linear-gradient(180deg, #38df8b 0%, #1d7177 99%);
+  box-shadow: inset 2px 2px 5px 0 rgba(#f4e0f7, 0.5);
+}
+
+body {
+  font-family: "system-ui";
+  line-height: 1.4;
+  padding: 1rem;
+  background-color: #f7f7f7;
+  min-height: 1200px;
+}
+
+* {
+  box-sizing: border-box;
+}
+</style>
+<body>
+  <div class="section">
+    <h2>Title</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis non, inventore incidunt repudiandae id vel nisi officiis provident iste necessitatibus. Ex recusandae eveniet tempora.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis non, inventore incidunt repudiandae id vel nisi officiis provident iste necessitatibus. Ex recusandae eveniet tempora.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis non, inventore incidunt repudiandae id vel nisi officiis provident iste necessitatibus. Ex recusandae eveniet tempora.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis non, inventore incidunt repudiandae id vel nisi officiis provident iste necessitatibus. Ex recusandae eveniet tempora.</p>
+  </div>
 </body>
 </html>
