--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="wave2"><defs></defs><path id="feel_the_wave_two" d=""/></svg>
 
-                <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="wave3"><defs></defs><path id="feel_the_wave_two" d=""/></svg>
+                <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="wave3"><defs></defs><path id="feel_the_wave_three" d=""/></svg>
 
                 <!-- <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 600" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150">
                     <defs>
@@ -96,7 +96,7 @@
 <script>
     var wave1 = $('#feel_the_wave').wavify({
   height: 80,
-  bones: 4,
+  bones: 6,
   amplitude: 60,
   color: '#B289EF',
   speed: .15
@@ -104,16 +104,17 @@
 
 var wave2 = $('#feel_the_wave_two').wavify({
   height: 60,
-  bones: 3,
+  bones: 4,
   amplitude: 40,
   color: 'rgba(150, 97, 255, .8)',
   speed: .25
 });
 var wave3 = $('#feel_the_wave_three').wavify({
-  height: 40,
-  bones: 2,
+  height: 140,
+  bones: 4,
   amplitude: 20,
-  color: 'red',
+  color: 'linear-gradient(180deg, #38df8b 0%, #1d7177 99%)',
   speed: .25
+  
 });
 </script>
