--- a/index.html
+++ b/index.html
@@ -95,26 +95,26 @@
 
 <script>
     var wave1 = $('#feel_the_wave').wavify({
-  height: 80,
-  bones: 6,
+  height: 30,
+  bones: 5,
   amplitude: 60,
-  color: '#B289EF',
-  speed: .15
+  color: '#f4e0f7',
+  speed: .25
 });
 
 var wave2 = $('#feel_the_wave_two').wavify({
-  height: 60,
+  height: 80,
   bones: 4,
   amplitude: 40,
-  color: 'rgba(150, 97, 255, .8)',
-  speed: .25
+  color: '#38df8b',
+  speed: .20
 });
 var wave3 = $('#feel_the_wave_three').wavify({
   height: 140,
   bones: 4,
   amplitude: 20,
-  color: 'linear-gradient(180deg, #38df8b 0%, #1d7177 99%)',
-  speed: .25
-  
+  color: '#1d7177',
+  speed: .15
+
 });
 </script>
