--- a/index.html
+++ b/index.html
@@ -122,11 +122,31 @@
                 </div>              
             </div>
             <div id="wrapper" class="wrapper">
-                <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="wave1"><defs></defs><path id="feel_the_wave" d=""/></svg>
+                <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="wave1">
+                    <defs>
+                        <linearGradient id="gradient" x1="29%" y1="5%" x2="71%" y2="95%">
+                            <stop offset="5%" stop-color="#f78da788">
+                            </stop>
+                            <stop offset="95%" stop-color="#32ded488">
+                            </stop>
+                        </linearGradient>
+                    </defs>
+                    <path id="feel_the_wave" d=""/>
+                </svg>
+                    
+                <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="wave2">
+                    <defs>
 
-                <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="wave2"><defs></defs><path id="feel_the_wave_two" d=""/></svg>
+                    </defs>
+                    <path id="feel_the_wave_two" d=""/>
+                </svg>
 
-                <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="wave3"><defs></defs><path id="feel_the_wave_three" d=""/></svg>
+                <svg width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="wave3">
+                    <defs>
+
+                    </defs>
+                    <path id="feel_the_wave_three" d=""/>
+                </svg>
 
 
             </div>
@@ -149,10 +169,10 @@
 <script>
  var wave1 = $('#feel_the_wave').wavify({
     height: 30,
+
     bones: 5,
     amplitude: 60,
-    
-    color: '#f4e0f7',
+    color: 'url(#gradient)',
     speed: .25
   });
   
@@ -171,6 +191,11 @@
     speed: .15
   
   });
+
+  var mySVG = document.getElementById('svg');
+    if ($(window).width() >480) {
+   mySVG.setAttribute("viewBox", "0 100 400 300"); 
+}
 
 var svg = document.getElementById("swimming-girl");
 var s = Snap(svg);
