--- a/webP.html
+++ b/webP.html
@@ -154,15 +154,15 @@
             <p style="font-family: 'Corben', cursive; color: wheat;">website_food company website</p>
         </div>         
         <div class="webP">
-            <a href="#" ><h4>lodiing...</h4></a>
+            <a href="#" ><h4>loding...</h4></a>
             <p style="font-family: 'Corben', cursive; color: wheat;"></p>
         </div>      
         <div class="webP">
-            <a href="#" ><h4>lodiing...</h4></a>
+            <a href="#" ><h4>loding...</h4></a>
             <p style="font-family: 'Corben', cursive; color: wheat;"></p>
         </div>     
         <div class="webP">
-            <a href="#" ><h4>lodiing...</h4></a>
+            <a href="#" ><h4>loding...</h4></a>
             <p style="font-family: 'Corben', cursive; color: wheat;"></p>
         </div>     
         
