--- a/hoogle/index.html
+++ b/hoogle/index.html
@@ -231,7 +231,7 @@
                         <a href="./hoogle_account.html" ><img src="./img/h_account.png" title="Hoogle 계정">Hoogle 계..</a>
                     </div>
                     <div class="popupitem">
-                        <a href="./hoogle.html"><img src="./img/h_logo1.png" title="검색">검색</a>
+                        <a href="./hoogle_search.html"><img src="./img/h_logo1.png" title="검색">검색</a>
                     </div>
                     <div class="popupitem">
                         <a href="#"><img src="./img/h_map.png" title="지도">지도</a>
