--- a/temp.html
+++ b/temp.html
@@ -86,7 +86,11 @@
         </div>
         <div class="center">
             <div class="center_1">
-
+                <form action="submit()">
+                    <label for="age">나이:</label>
+                    <input id="age" type="text">
+                    <input type="submit" id="age" value="확인">
+                </form>
             </div>
             <div class="center_2">
 
@@ -106,3 +110,13 @@
     </div>
 </body>
 </html>
+<script>
+  function submit() {
+    var age = document.querySelector('#age').value;
+    if (age < 19) {
+      alert("미성년입니다");
+    } else {
+      alert('성인입니다');
+    }
+  }
+</script>
