--- a/rwb/index.html
+++ b/rwb/index.html
@@ -34,6 +34,10 @@
             font-size: large;
             font-weight: bold;
         }
+        span{
+            font-weight: bold;
+            color: darkslateblue;
+        }
         h2{
             font-size: 40px;
         }
@@ -113,7 +117,8 @@
                     <div class="sitelist_box">
                         <p>temporary :</p>
                             <ul>
-                                <li>                            </li>
+                                <li><span>기획서작성:</span><a href="https://medialoot.com/item/ui-style-guide-template/?fbclid=IwAR0h363ojuX5nBcwpvxoFoZCKsMG6yacVzM7xnv6_2hLi3R5dSXkbdDbwq8#_=_">
+                                    디자인가이드 </a></li>
                             </ul>
                     </div>
                     <div class="sitelist_box">
@@ -125,12 +130,13 @@
                     <div class="sitelist_box">
                         <p>CSS :</p>
                             <ul>
-                                <li><a href="https://noonnu.cc/">눈누 (무료폰트)</a></li>
-                                <li><a href="https://colorscripter.com/">Color scripter (html 코드 이미지화)
-                                </a></li>
+                                <li><span>폰트:</span><a href="https://noonnu.cc/">눈누 (무료폰트)</a></li>
+                                <li><span>폰트:</span><a href="https://fonts.google.com/specimen/Corben"> 구글 폰트</a></li>
+                                <li><a href="https://colorscripter.com/">Color scripter (html 코드 이미지화)</a></li>
                             </ul>
                     </div>
                     <div class="sitelist_box">
+                        <a href="./cssanimation.html">CSS Animation more</a>
                         <p>:)</p>
                             <ul>
                                 <li>
@@ -153,7 +159,7 @@
                                 <li><a href="http://cssgridgarden.com/?#ko">Grid 정원게임 (css grid) http://cssgridgarden.com/?#ko</a></li>
                                 <li><a href="https://flukeout.github.io/">게임 (Select the plates) https://flukeout.github.io/</a></li>
                                 <li><a href="https://www.w3schools.com/codegame/index.html">논리력게임??</a></li>
-                                <li><a href=""></a></li>
+                                <li><span></span><a href=""></a></li>
                             </ul>
                     </div>
                 </div>
