--- a/rwb/cssanimation.html
+++ b/rwb/cssanimation.html
@@ -45,6 +45,28 @@ img{
     width: 200px;
 }
 
+@media all and (max-width:480px) {
+    .box{
+    display: grid;
+    grid-template-columns: repeat(1, 100%);
+    text-align: center;
+    padding: 1px;
+    }
+    /* .boxItme{
+    background-color: rgb(241, 174, 167);
+    background-origin: content-box;
+    padding: 5px;
+    }
+    .boxItmes{
+    border: 1px rgb(241, 174, 167) solid;
+    background-origin: content-box;
+    padding: 5px;
+    } */
+
+}
+
+    
+}
 </style>
 <body>
     <div class="wrap">
