--- a/rwb/index.html
+++ b/rwb/index.html
@@ -103,6 +103,9 @@
                             <li><a href="./html/03.html"> 주소체계</a></li>
                             <li><a href="./html/04.html"> 이미지맵</a></li>
                             <li><a href="./html/05.html"> 폼</a></li>
+                            <li><a href="./html/06.html"> 레이아웃</a></li>
+                            <li><a href="./html/07.html"> 레이아웃2단</a></li>
+                            <li><a href="./html/08.html"> 레이아웃_float</a></li>
                         </ol>
                     </ul>
                 <br>
@@ -132,7 +135,9 @@
                             <ul>
                                 <li><span>폰트:</span><a href="https://noonnu.cc/">눈누 (무료폰트)</a></li>
                                 <li><span>폰트:</span><a href="https://fonts.google.com/specimen/Corben"> 구글 폰트</a></li>
+                                <li><span>폰트:</span><a href="https://webtongs.com/1557">디즈니 폰트 참조</a></li>
                                 <li><a href="https://colorscripter.com/">Color scripter (html 코드 이미지화)</a></li>
+                                <li><span>이미지비율:</span><a href="https://andrew.hedges.name/experiments/aspect_ratio/">자동비율</a></li>
                             </ul>
                     </div>
                     <div class="sitelist_box">
