--- a/rwb/quizmemo.html/index.html
+++ b/rwb/quizmemo.html/index.html
@@ -16,6 +16,8 @@
             <ul>
                 <li><a href="./quiz1.html">quiz1 바로가기</a>
                 <li><a href="./quiz2.html">quiz2 바로가기</a>
+                <li><a href="./ex1.html">ex1 바로가기</a>
+                <li><a href="./ex2.html">ex2 바로가기</a>
             </ul>
         </ul>
         <ul>
