--- a/rwb/quizmemo.html/ex2.html
+++ b/rwb/quizmemo.html/ex2.html
@@ -14,7 +14,8 @@
 <style>
     @font-face {
         font-family: 'disneyBad';
-        src: url('/webfolders/font/aliceInWonderland.ttf');
+        /* src: url('/webfolders/font/aliceInWonderland.ttf'); */
+        src: url('/webfoldersall/font/aliceInWonderland.ttf');
     }
     *{
         font-family: 'disneyBad';
