--- a/rwb/quizmemo.html/ex2.html
+++ b/rwb/quizmemo.html/ex2.html
@@ -66,7 +66,7 @@
     }
     .main_left{
         padding-top: 50px;
-        border: 1px yellow solid;
+        /* border: 1px yellow solid; */
         width: 577px;
 
     }
