--- a/rwb/quizmemo.html/ex2.html
+++ b/rwb/quizmemo.html/ex2.html
@@ -31,7 +31,7 @@
     .wrap{
         width: 960px;
         background-color: black;
-        border: 1px red solid;
+        /* border: 1px red solid; */
     }
     .header{
         background-color: ghostwhite;
@@ -192,10 +192,22 @@
         justify-items: center;
     }
 
+    .submit{
+        border: none;
+        width: 200px;
+        font-size: 36px;
+        background-color: transparent;
+        color: wheat;
+        background-color: brown;
+
+    }
 
 
     .footer{
+        padding: 15px auto;
+        text-align: center;
 
+        font-size: 20px;
     }
     
 </style>
@@ -270,7 +282,7 @@
             </form>
         </div>
         <div class="footer">
-            <p>footer</p>
+            <p>HYE @2022 </p>
         </div>  
     </div>
 </body>
