--- a/rwb/index.html
+++ b/rwb/index.html
@@ -165,11 +165,21 @@
                                 <li><span></span><a href=""></a></li>
                             </ul>
                     </div>
-                    <div>
-                        https://ecudemo142089.cafe24.com/wireframe/wireframe01.jpg
-                        https://ecudemo142089.cafe24.com/wireframe/wireframe02.png
-                        https://ecudemo142089.cafe24.com/wireframe/basic5.jpg
-                        https://ecudemo142089.cafe24.com/wireframe/basic05.png
+                    <div class="sitelist_box">
+                        <a href="./layout.html">와이어프레임</a>
+                        <li><span></span><a href=""></a></li>
+
+                        부모의 영역에 hidden: 범위에서 벗어남
+  
+                        display: none; 요소가 없는 상태 =opacitiy:0;+  visibility: hidden;  
+                        opacitiy:0;  
+                        visibility: hidden;
+                        
+                        자식 z 줄경우
+                        z-index: 값;
+                        position: relative;
+                        
+                        &부모도 올려야한다.
                     </div>
                 </div>
             </div>
