--- a/rwb/layout.html
+++ b/rwb/layout.html
@@ -151,7 +151,7 @@ img{
                         <img src="https://ecudemo142089.cafe24.com/wireframe/wireframe05.jpg" alt="">
                     </div>
                     <div>
-                        <h3>여행사 홈페이지</h3>
+                        <h3>여행사 웹사이트</h3>
                         <h4></h4>
                         <p>여행사 메인페이지</p>
                         <div>
@@ -163,12 +163,12 @@ img{
             <div class="boxItme">
                 <a href="https://ecudemo142089.cafe24.com/wireframe/wireframe06.png">
                     <div class="imgbox">
-                        <img src="" alt="">
+                        <img src="https://ecudemo142089.cafe24.com/wireframe/wireframe06.png" alt="">
                     </div>
                     <div>
-                        <h3></h3>
+                        <h3>디자인회사 (전체)웹사이트</h3>
                         <h4></h4>
-                        <p></p>
+                        <p>회사+팀 회사 홈페이지 (전체</p>
                         <div>
 
                         </div>
