--- a/rwb/index.html
+++ b/rwb/index.html
@@ -106,6 +106,9 @@
                             <li><a href="./html/06.html"> 레이아웃</a></li>
                             <li><a href="./html/07.html"> 레이아웃2단</a></li>
                             <li><a href="./html/08.html"> 레이아웃_float</a></li>
+                            <li><a href="./html/09.html"> 이미지url 지정</a></li>
+                            <li><a href="./html/10.html"> 가상선택자</a></li>
+                            <li><a href="./html/11.html"> 스프라이트 애니메이션</a></li>
                         </ol>
                     </ul>
                 <br>
