--- a/rwb/quizmemo.html/index.html
+++ b/rwb/quizmemo.html/index.html
@@ -18,6 +18,8 @@
                 <li><a href="./quiz2.html">quiz2 바로가기</a>
                 <li><a href="./ex1.html">ex1 바로가기</a>
                 <li><a href="./ex2.html">ex2 바로가기</a>
+                <li><a href="./ex3.html">ex3 바로가기</a>
+                <li><a href="./ex4.html">ex4 바로가기</a>
             </ul>
         </ul>
         <ul>
