--- a/rwb/quizmemo.html/index.html
+++ b/rwb/quizmemo.html/index.html
@@ -20,6 +20,8 @@
                 <li><a href="./ex2.html">ex2 바로가기</a>
                 <li><a href="./ex3.html">ex3 바로가기</a>
                 <li><a href="./ex4.html">ex4 바로가기</a>
+                <li><a href="./ex5.html">ex5 바로가기 (그리드시스템)</a>
+                <li><a href="./ex6.html">ex6 바로가기 (반응형)</a>
             </ul>
         </ul>
         <ul>
