--- a/rwb/index.html
+++ b/rwb/index.html
@@ -109,6 +109,9 @@
                             <li><a href="./html/09.html"> 이미지url 지정</a></li>
                             <li><a href="./html/10.html"> 가상선택자</a></li>
                             <li><a href="./html/11.html"> 스프라이트 애니메이션</a></li>
+                            <li><a href="./html/12.html"> 가변 그리드 계산</a></li>
+                            <li><a href="./html/13.html"> 가변 그리드 시스템</a></li>
+                            <li><a href="./html/14.html"> 가변 그리드 시스템+미디어쿼리</a></li>
                         </ol>
                     </ul>
                 <br>
@@ -121,25 +124,38 @@
                 <h2>site</h2>
                 <div class="sitelist">
                     <div class="sitelist_box">
+                        <p>main site :</p>
+                            <ul>
+                                <li><span>bootstrap</span><a href="https://getbootstrap.kr/">bootstrap::getbootstrap.kr</a></li>
+                                <li><span></span><a href=""></a></li>
+                            </ul>
+                    </div>
+                    <div class="sitelist_box">
                         <p>temporary :</p>
                             <ul>
                                 <li><span>기획서작성:</span><a href="https://medialoot.com/item/ui-style-guide-template/?fbclid=IwAR0h363ojuX5nBcwpvxoFoZCKsMG6yacVzM7xnv6_2hLi3R5dSXkbdDbwq8#_=_">
                                     디자인가이드 </a></li>
+                                <li><span>레이아웃 그리드시스템:내용</span><a href="https://material.io/design/layout/responsive-layout-grid.html#columns-gutters-and-margins">그리드시스템 ::gridcalculator</a></li>
                             </ul>
                     </div>
                     <div class="sitelist_box">
                         <p>important :</p>
                             <ul>
-                                <li></li>
+                                <li><span></span><a href=""></a></li>
+                                <li><span></span><a href=""></a></li>
                             </ul>
                     </div>
                     <div class="sitelist_box">
                         <p>CSS :</p>
                             <ul>
-                                <li><span>폰트:</span><a href="https://noonnu.cc/">눈누 (무료폰트)</a></li>
-                                <li><span>폰트:</span><a href="https://fonts.google.com/specimen/Corben"> 구글 폰트</a></li>
-                                <li><span>폰트:</span><a href="https://webtongs.com/1557">디즈니 폰트 참조</a></li>
+                                <li><span>CSS font:src</span><a href="https://noonnu.cc/">눈누 (무료폰트)</a></li>
+                                <li><span>CSS font:src</span><a href="https://fonts.google.com/specimen/Corben"> 구글 폰트</a></li>
+                                <li><span>CSS font:src</span><a href="https://webtongs.com/1557">디즈니 폰트 참조</a></li>
                                 <li><a href="https://colorscripter.com/">Color scripter (html 코드 이미지화)</a></li>
+                                <li><span>CSS 그라데이션:src</span><a href="https://mycolor.space/">CSS 그라데이션</a></li>
+                                <li><span>레이아웃 그리드시스템:계산기</span><a href="http://gridcalculator.dk/">그리드시스템 계산기::gridcalculator</a></li>
+                                <li><span>레이아웃 그리드시스템:예시</span><a href="https://960.gs/">그리드시스템 예시::grid</a></li>
+                                
                                 <li><span>이미지비율:</span><a href="https://andrew.hedges.name/experiments/aspect_ratio/">자동비율</a></li>
                             </ul>
                     </div>
@@ -147,7 +163,17 @@
                         <a href="./cssanimation.html">CSS Animation more</a>
                         <p>:)</p>
                             <ul>
-                                <li><span>폰트</span><a href="https://wsss.tistory.com/13">러브레터 글자 효과 https://wsss.tistory.com/13</a></li>
+                                <li><span>CSS </span><a href="https://wsss.tistory.com/">다양한css wsss.tistory.com</a></li>
+                                <li><span>CSS font</span><a href="https://wsss.tistory.com/13">러브레터 글자 효과 wsss.tistory.com/13</a></li>
+                                <li><span>CSS sgv</span><a href="https://css-tricks.com/gooey-effect/">sgv 효과 The Gooey Effect</a></li>
+                                <li><span>CSS (다각형)</span><a href="https://css-tricks.com/the-shapes-of-css/">도형::the-shapes-of-css</a></li>
+                                <li><span>CSS (기본형)</span><a href="https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=jsy930609&logNo=221389876987">기본도형::</a></li>
+                                <li><span>???CSS (하트)</span><a href="https://codingbroker.tistory.com/55">도형(하트)</a></li>
+                                <li><span>???CSS (하트+애니메이션)</span><a href="https://wsss.tistory.com/704">도형(하트+애니)</a></li>
+                                <li><span></span><a href=""></a></li>
+                                <li><span></span><a href=""></a></li>
+                                <li><span></span><a href=""></a></li>
+
                             </ul>
                     </div>
 
@@ -169,7 +195,7 @@
                             </ul>
                     </div>
                     <div class="sitelist_box">
-                        <a href="./layout.html">와이어프레임</a>
+                        <p><a href="./layout.html">와이어프레임</a></p>
                         <li><span></span><a href=""></a></li>
                         https://ecudemo142089.cafe24.com/wireframe/wireframe01.jpg
                         https://ecudemo142089.cafe24.com/wireframe/basic5.jpg
@@ -185,6 +211,13 @@
                         position: relative;
                         
                         &부모도 올려야한다.
+                    </div>
+                    <div class="sitelist_box">
+                        <p >ect</p>
+                            <ul>
+
+                                <li><span>php참조사이트</span><a href="https://sir.kr/main/yc5/">그누보드:웹에서 게시판, 회원정보 등을 편리하게 관리하는 게시판(BBS - Bulletin Board System) 프로그램</a></li>
+                            </ul>
                     </div>
                 </div>
             </div>
