--- a/rwb/quizmemo.html/index.html
+++ b/rwb/quizmemo.html/index.html
@@ -23,6 +23,11 @@
                 <li><a href="./ex5.html">ex5 바로가기 (그리드시스템)</a>
                 <li><a href="./ex6.html">ex6 바로가기 (반응형)</a>
             </ul>
+            <li>js</li>
+            <ul>
+                <li><a href="./ex1_js.html">ex1 바로가기</a>
+                <li><a href="./ex2_js.html">ex2 바로가기</a>
+            </ul>
         </ul>
         <ul>
             <li>memo</li>
