--- a/rwb/index.html
+++ b/rwb/index.html
@@ -120,6 +120,7 @@
                             <li><a href="./js/03.html"> </a></li>
                             <li><a href="./js/04.html"> 비교연산자</a></li>
                             <li><a href="./js/05.html"> if와 '?'를 사용한 조건 처리</a></li>
+                            <li><a href="./js/06.html"> 논리연산자</a></li>
 
 
                         </ol>
