--- a/rwb/quizmemo.html/index.html
+++ b/rwb/quizmemo.html/index.html
@@ -25,8 +25,9 @@
             </ul>
             <li>js</li>
             <ul>
-                <li><a href="./ex1_js.html">ex1 바로가기</a>
-                <li><a href="./ex2_js.html">ex2 바로가기</a>
+                <li><a href="./ex1_js.html">ex1 바로가기 비교연산자</a>
+                <li><a href="./ex2_js.html">ex2 바로가기 if와 '?'를 사용한 조건 처리</a>
+                <li><a href="./ex3_js.html">ex3 바로가기 논리연산자</a>
             </ul>
         </ul>
         <ul>
