--- a/rwb/index.html
+++ b/rwb/index.html
@@ -121,8 +121,9 @@
                             <li><a href="./js/04.html"> 비교연산자</a></li>
                             <li><a href="./js/05.html"> if와 '?'를 사용한 조건 처리</a></li>
                             <li><a href="./js/06.html"> 논리연산자</a></li>
-
-
+                            <li><a href="./js/07.html"> 병합 연산자</a></li>
+                            <li><a href="./js/08.html"> while과 for 반복문</a></li>
+                            <li><a href="./js/09.html"> switch문</a></li>
                         </ol>
                     </ul>
                 <br>
