--- a/rwb/quizmemo.html/index.html
+++ b/rwb/quizmemo.html/index.html
@@ -28,6 +28,9 @@
                 <li><a href="./ex1_js.html">ex1 바로가기 비교연산자</a>
                 <li><a href="./ex2_js.html">ex2 바로가기 if와 '?'를 사용한 조건 처리</a>
                 <li><a href="./ex3_js.html">ex3 바로가기 논리연산자</a>
+                <li><a href="./ex4_js.html">ex4 바로가기??</a>
+                <li><a href="./ex5_js.html">ex5 바로가기 몸무게 </a><a href="./ex5-01_js.html">표준체중</a><a href="./ex5-02_js.html">BMI</a>
+                <li><a href="./ex6_js.html">ex5 바로가기 반복문</a>
             </ul>
         </ul>
         <ul>
