--- a/rwb/index.html
+++ b/rwb/index.html
@@ -124,7 +124,8 @@
                             <li><a href="./js/07.html"> 병합 연산자</a></li>
                             <li><a href="./js/08.html"> while과 for 반복문</a></li>
                             <li><a href="./js/09.html"> switch문</a></li>
-                            <li><a href="./js/10.html"> 함수</a></li>
+                            <li><a href="./js/10.html"> 함수: 선언문</a></li>
+                            <li><a href="./js/11.html"> 함수: 화살표현식</a></li>
                         </ol>
                     </ul>
                 <br>
