--- a/rwb/quizmemo.html/index.html
+++ b/rwb/quizmemo.html/index.html
@@ -30,7 +30,10 @@
                 <li><a href="./ex3_js.html">ex3 바로가기 논리연산자</a>
                 <li><a href="./ex4_js.html">ex4 바로가기??</a>
                 <li><a href="./ex5_js.html">ex5 바로가기 몸무게 </a><a href="./ex5-01_js.html">표준체중</a><a href="./ex5-02_js.html">BMI</a>
-                <li><a href="./ex6_js.html">ex5 바로가기 반복문</a>
+                <li><a href="./ex6_js.html">ex6 바로가기 반복문</a><a href="./ex6-01_js.html">6-01</a><a href="./ex6-01-01_js.html">6-01-01</a><a href="./ex6-02_js.html">6-02</a>
+                <li><a href="./ex7_js.html">ex5 바로가기 switch문 </a><a href="./ex7-01_js.html">7-01</a>
+                <li><a href="./ex8_js.html">ex5 바로가기 함수 :선언문</a><a href="./ex8-01_js.html">화살표</a>
+                <li><a href="./ex9_js.html">ex5 바로가기 함수 : 표현식</a>
             </ul>
         </ul>
         <ul>
