--- a/rwb/index.html
+++ b/rwb/index.html
@@ -41,6 +41,11 @@
         h2{
             font-size: 40px;
         }
+        h3{
+            background-color: crimson;
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
         .classtime{
             background-clip: content-box;
             background-color: blanchedalmond;
@@ -91,60 +96,9 @@
     </script>
     <body>
         <div class="wrap">
-
-                <h1>반응형 웹&앱 콘텐츠 개발자 양성과정B</h1>
-                    <input id="check_btn" type="checkbox"/>
-                    <label for="check_btn">Click!</label>
-                    <ul class="classtime">
-                        <li>html</li>
-                        <ol>
-                            <li><a href="./html/01.html"> 블록 & 인라인</a></li>
-                            <li><a href="./html/02.html"> 테이블</a></li>
-                            <li><a href="./html/03.html"> 주소체계</a></li>
-                            <li><a href="./html/04.html"> 이미지맵</a></li>
-                            <li><a href="./html/05.html"> 폼</a></li>
-                            <li><a href="./html/06.html"> 레이아웃</a></li>
-                            <li><a href="./html/07.html"> 레이아웃2단</a></li>
-                            <li><a href="./html/08.html"> 레이아웃_float</a></li>
-                            <li><a href="./html/09.html"> 이미지url 지정</a></li>
-                            <li><a href="./html/10.html"> 가상선택자</a></li>
-                            <li><a href="./html/11.html"> 스프라이트 애니메이션</a></li>
-                            <li><a href="./html/12.html"> 가변 그리드 계산</a></li>
-                            <li><a href="./html/13.html"> 가변 그리드 시스템</a></li>
-                            <li><a href="./html/14.html"> 가변 그리드 시스템+미디어쿼리</a></li>
-                        </ol>
-                        <li>js</li>
-                        <ol>
-                            <li><a href="./js/01.html"> </a></li>
-                            <li><a href="./js/02.html"> </a></li>
-                            <li><a href="./js/03.html"> </a></li>
-                            <li><a href="./js/04.html"> 비교연산자</a></li>
-                            <li><a href="./js/05.html"> if와 '?'를 사용한 조건 처리</a></li>
-                            <li><a href="./js/06.html"> 논리연산자</a></li>
-                            <li><a href="./js/07.html"> 병합 연산자</a></li>
-                            <li><a href="./js/08.html"> while과 for 반복문</a></li>
-                            <li><a href="./js/09.html"> switch문</a></li>
-                            <li><a href="./js/10.html"> 함수: 선언문</a></li>
-                            <li><a href="./js/11.html"> 함수: 표현식</a></li>
-                            <li><a href="./js/11.html"> 함수: 화살표현식</a></li>
-                        </ol>
-                    </ul>
-                <br>
-                <hr>
-
-            <div><a href="./quizmemo.html/index.html">quiz 바로가기</a></div>
-        </div>
-        <div class="wrap">
-            <div class="sub1">
-                <h2>site</h2>
-                <div class="sitelist">
-                    <div class="sitelist_box">
-                        <p>main site :</p>
-                            <ul>
-                                <li><span>bootstrap</span><a href="https://getbootstrap.kr/">bootstrap::getbootstrap.kr</a></li>
-                                <li><span></span><a href=""></a></li>
-                            </ul>
-                    </div>
+            <a href="./classHyo/index .html">
+                <h3>classHyo:수업 리스트 바로가기</h3>
+            </a>                    
                     <div class="sitelist_box">
                         <p>temporary :</p>
                             <ul>
@@ -193,13 +147,7 @@
                             </ul>
                     </div>
 
-                    <div class="sitelist_box">
-                        <p>Class time :</p>
-                            <ul>
-                                <li><a href="http://pol27.com/green22/student.html">수업 채팅방</a></li>
-                                <li><a href="https://www.w3schools.com">https://www.w3schools.com/</a></li>
-                            </ul>
-                    </div>
+
                     <div class="sitelist_box">
                         <p >Class time_play :</p>
                             <ul>
