--- a/rwb/index.html
+++ b/rwb/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <mata name="kyewords" content="웹,디자인,웹퍼블리셔">
         <meta name="description" content="이페이지는 인덱스">
-        <link rel="stylesheet" type="text/css" href="./css/common.css">
+        <link rel="stylesheet" type="text/css" href="./classHyo/css/common.css">
         <base target="_blank">
         <title></title>
     </head>
@@ -18,7 +18,7 @@
         } */
         @font-face{
             font-family: 'myHeart';
-            src: url('H.ttf');
+            src: url('webfolders/font/donounMedium.ttf');
         }
 
         *{
