--- a/rwb/classHyo/quizmemo.html/ex2.html
+++ b/rwb/classHyo/quizmemo.html/ex2.html
@@ -215,7 +215,7 @@
     <div class="wrap">
         <div class="header">
             <div class="header_left">
-                <img width="100px" src="https://w.namu.la/s/bfa3f4063052c2d0836e212e9c61600aeda42bc85607fc02fe11bddd6fb3157e1de350c6ef53ff818e1b0c284933e43cc1090d026f93f526871a353e7841ff140bb7c154c23a494e272dd6e05db411049dccaac0f225c8199a3616bd2d9232ba">
+                <img width="100px" src="https://ibb.co/rM11C9P">
             </div>
             <div class="header_center">
                 <p>walt disney animation</p>
@@ -249,7 +249,7 @@
                 </div>
             </div>
             <div class="main_right">
-                <img  src="https://w.namu.la/s/cfb27cf1289491e21162d004016f16526dd32161ac1911a748ea16b428b10c582207276c9cec88e3d5f80a481a98ce75adf97900c05f37e2ed8941d51c1065889e078be25eb3fc68255ca1cdf5359f1862f80bb89a460f747c40469ec38fc6a291b0359efa14fad2ed7addc23ebf4d3f" alt="크루엘라 디즈니 만화">
+                <img  src="https://ibb.co/zVCV9y6" alt="크루엘라 디즈니 만화">
             </div>
         </div>
         <div class="commit">
