--- a/rwb/classHyo/js/13.html
+++ b/rwb/classHyo/js/13.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>함수 :화살표현식</title>
+    <title>객체</title>
 </head>
 
 <body>
     <div></div>
   
-    함수 :화살표현식
+    객체
     https://www.w3schools.com/js/js_operators.asp
-    https://ko.javascript.info/arrow-functions-basics
+    https://ko.javascript.info/object#ref-2268
 
+    <a href="../quizmemo.html/ex10_js.html"> ex10_js.html </a>
 
     <br>
    <div>
