--- a/rwb/classHyo/quizmemo.html/ex10_js.html
+++ b/rwb/classHyo/quizmemo.html/ex10_js.html
@@ -17,7 +17,7 @@
 </body>
 </html>
 <script>
-    //문 1) 객체야 안녕?
+//문 1) 객체야 안녕?
     /*
     다음 각 동작을 한 줄씩, 코드로 작성해보세요.
 
@@ -28,8 +28,62 @@
     user에서 프로퍼티 name을 삭제하세요.
     */
 
-    let user = {
-        
+    let user = {};
+    user.name: "John";
+    user.surnamer: "Smith";
+
+    user.name = "Pete";
+    delete user.name;
+
+//문 2)객체가 비어있는지 확인하기
+    /*
+    let schedule = {};
+
+    alert( isEmpty(schedule) ); // true
+
+    schedule["8:30"] = "get up";
+
+    alert( isEmpty(schedule) ); // false
+    */
+
+    function isEmpty(obj) {
+        for (let kye in obj) {
+            return false;
+        }
+        return true
+    }
+
+//문 3) 변하지 않는 객체?
+    const user = {
+    name: "John"
+    };
+    // 아래 코드는 에러 없이 실행될까요?
+    user.name = "Pete";
+
+    //답 됨 . 자체를 바꾸는게 아니라 내용을 바꾸는거라
+
+//문 4) 프로퍼티 합계 구하기
+
+    let salaries = {
+        John: 100,
+        Ann: 160,
+        Pete: 130
+        }
+
+    let sum = 0;
+    for (let key in salaries) {
+        sum += salaries[kye];
+    }
+    alert(sum);
+
+//문 5 ) 프로퍼티 값 두 배로 부풀리기
+    
+    function multiplyNumeric(obj) {
+        for (let key in obj) {
+            if (typeof obj[kye] == "number") {
+                obj[kye] *= 2;
+            }
+        }
     }
 
 </script>
