--- a/rwb/classHyo/quizmemo.html/ex2.html
+++ b/rwb/classHyo/quizmemo.html/ex2.html
@@ -215,7 +215,7 @@
     <div class="wrap">
         <div class="header">
             <div class="header_left">
-                <img width="100px" src="https://ibb.co/rM11C9P">
+                <img src="https://i.ibb.co/wNS3brv/image.jpg" alt="image" width="200px">
             </div>
             <div class="header_center">
                 <p>walt disney animation</p>
@@ -249,7 +249,7 @@
                 </div>
             </div>
             <div class="main_right">
-                <img  src="https://ibb.co/zVCV9y6" alt="크루엘라 디즈니 만화">
+                <img src="https://i.ibb.co/QYCqYtw/cfb27cf1289491e21162d004016f16526dd32161ac1911a748ea16b428b10c582207276c9cec88e3d5f80a481a98ce75adf9.png" alt="cfb27cf1289491e21162d004016f16526dd32161ac1911a748ea16b428b10c582207276c9cec88e3d5f80a481a98ce75adf9" border="0"></a><br /><a target='_blank' href='https://emoticoncentral.com/category/flag-for-united-kingdom'alt="크루엘라 디즈니 만화">
             </div>
         </div>
         <div class="commit">
