--- a/rwb/classHyo/index .html
+++ b/rwb/classHyo/index .html
@@ -137,6 +137,7 @@
                             <li>[기본]<a href="./js/10.html"> 함수: 선언문</a></li>
                             <li>[기본]<a href="./js/11.html"> 함수: 표현식</a></li>
                             <li>[기본]<a href="./js/12.html"> 함수: 화살표현식</a></li>
+                            <li>[기본]<a href="./js/13.html"> 객체</a></li>
                         </ol>
                     </ul>
                 <br>
