--- a/rwb/classHyo/quizmemo.html/index.html
+++ b/rwb/classHyo/quizmemo.html/index.html
@@ -34,6 +34,7 @@
                 <li><a href="./ex7_js.html">ex5 바로가기 switch문 </a><a href="./ex7-01_js.html">7-01</a>
                 <li><a href="./ex8_js.html">ex5 바로가기 함수 :선언문</a><a href="./ex8-01_js.html">화살표</a>
                 <li><a href="./ex9_js.html">ex5 바로가기 함수 : 표현식</a>
+                <li><a href="./ex10_js.html">ex5 바로가기 객체</a>
             </ul>
         </ul>
         <ul>
