--- a/rwb/classHyo/index .html
+++ b/rwb/classHyo/index .html
@@ -138,6 +138,8 @@
                             <li>[기본]<a href="./js/11.html"> 함수: 표현식</a></li>
                             <li>[기본]<a href="./js/12.html"> 함수: 화살표현식</a></li>
                             <li>[기본]<a href="./js/13.html"> 객체</a></li>
+                            <li>[기본]<a href="./js/14.html"> 참조에 의한 객체 복사</a></li>
+                            <li>[기본]<a href="./js/15.html"> </a>매서드와 this</li>
                         </ol>
                     </ul>
                 <br>
