--- a/rwb/index.html
+++ b/rwb/index.html
@@ -160,6 +160,8 @@
                     </div>
                     <div class="sitelist_box">
                         <p><a href="./layout.html">와이어프레임</a></p>
+                        <li><span>CSS templates</span><a href="https://www.w3schools.com/w3css/w3css_templates.asp">CSS templates 예제</a></li>
+                        <li><span>CSS+JS templates</span><a href="https://www.w3schools.com/howto/default.asp">CSS+JS templates 예제</a></li>
                         <li><span></span><a href=""></a></li>
                         https://ecudemo142089.cafe24.com/wireframe/wireframe01.jpg
                         https://ecudemo142089.cafe24.com/wireframe/basic5.jpg
